# dispatcher-agents

./: .gitignore  EVIDENCE-runtime.md  EVIDENCE.md  MANIFESTO.md  PILLAR_TESTING_MANUAL.md  README-BUILD.md  README.md  SKILL.md  demo-audit-b.jsonl  demo-audit.jsonl  pyproject.toml
.github/workflows/: ci.yml
after-action/: P11-p11-0e24149b.md  P11-p11-2452d3fb.md  P11-p11-40714146.md  P11-p11-65f56674.md  P11-p11-805c3fed.md
baseline/: README.md  priority.json  routes.json
baseline-out/: BASELINE-baseline-9bf98a7b.md  audit-b.jsonl  audit.jsonl  baseline-kpi.json
demo/: baseline_run.py  run_p11_demo.py
dispatcher/: after_action.py  analysis.py  attestation.py  core.py  hub.py  kpi.py  loader.py  priority.py  runs.py  signatures.py  spokes.py  territory.py
docs/: TUNING_MANUAL.md
findings/: FINDING_context_load_replaces_reconstruction.md
tests/: test_analysis_kpi.py  test_day3.py  test_hub.py  test_hub_core_regressions.py  test_signer_chain.py
tools/: kpi_gate.py
