[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatcher-agents"
version = "0.6.0"
description = "TelsonBase dispatcher runtime: closed-track message hub with doctrine-enforced acks, idempotency, signatures, and restricted-speed holds"
requires-python = ">=3.10"
# open-mind (pillar) is required by dispatcher.analysis. Not on PyPI.
# Install from source BEFORE running tests/test_analysis_kpi.py:
#   pip install -e <path-to-open-mind-clone>
# NOTE: dispatcher.analysis requires the comparator at uncertainty weight 0.3
# with the broadened confidence regex. The live QuietFireAI/open-mind repo
# carries this since commit 857f0dc (pushed and SHA-verified 07/2026). A test
# pins the version and FAILS LOUDLY against any stale pillar. That is intended.

[tool.setuptools]
packages = ["dispatcher"]
