[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatcher-agents"
version = "0.7.0"
description = "TelsonBase dispatcher runtime: closed-track message hub with doctrine-enforced acks, idempotency, signatures, and restricted-speed holds"
requires-python = ">=3.10"
# open-mind (pillar) is required by dispatcher.analysis. Not on PyPI.
# Install from source BEFORE running tests/test_analysis_kpi.py:
#   pip install -e <path-to-open-mind-clone>
# NOTE: dispatcher.analysis requires the comparator at uncertainty weight 0.3
# with the broadened confidence regex. The live QuietFireAI/open-mind repo
# carries this since 857f0dc; since 0bf6301 the weights are exported constants
# (UNCERTAINTY_WEIGHT etc.) shared with the evidence module. A test pins the
# behavior and FAILS LOUDLY against any stale pillar. That is intended.

[project.optional-dependencies]
# The runtime CORE (dispatcher.core, dispatcher.hub) is zero-dependency.
# dispatcher.pillars and dispatcher.analysis import the six pillars from
# source (never vendored). Install them with:  pip install -e ".[pillars]"
# This is what the test suite and the P11 demo require.
pillars = [
    "before-turn @ git+https://github.com/QuietFireAI/before-turn",
    "open-mind @ git+https://github.com/QuietFireAI/open-mind",
    "agent-open-mind @ git+https://github.com/QuietFireAI/agent-open-mind",
    "sleep-marks @ git+https://github.com/QuietFireAI/sleep-marks",
    "pre-response-selfcheck @ git+https://github.com/QuietFireAI/pre-response-selfcheck",
    "splitvantage @ git+https://github.com/QuietFireAI/splitvantage",
]
# Ed25519 asymmetric authority tier only. HMAC tier stays zero-dep.
crypto = ["cryptography>=42"]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["dispatcher"]
